# PELA

./: .gitignore
small-olmocr/: PELA_README.md  aggressive_compression.py  analyze_compression_coverage.py  analyze_true_sizes.py  apply_proper_pela.py  apply_quality_pela.py  complete_pela.py  conservative_compress.py  conservative_test.py  debug_compression.py  demo_comparison.py  demo_pela.py  diagnose_storage.py  download_model.py  evaluate_compression.py  example.py  layer_comparison.py  olmocr_validation.json  optimize_storage.py  pela_config.yaml  pela_demo_results.json  pela_olmocr.py  pela_train.py  proper_pela.py  pyproject.toml  quality_based_pela.py  quantization_demo.py  test_pela_real.py  test_pela_small.py  test_real_ocr.py  validate_olmocr.py
small-olmocr/compression_analysis/: comparison_results.json
small-olmocr/conservative_compression/: compression_analysis.json
